unpackaged/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>