unpackaged/main/default/objects/Lead/fields/SDO_Sales_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Lead_Quality__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (SDO_Sales_Lead_Total__c &gt; 0, &#39;015Hu000005qPCG&#39;, &#39;015Hu000005qPCH&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (SDO_Sales_Lead_Total__c &gt; 5, &#39;015Hu000005qPCG&#39;, &#39;015Hu000005qPCH&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (SDO_Sales_Lead_Total__c &gt; 10, &#39;015Hu000005qPCG&#39;, &#39;015Hu000005qPCH&#39;),&#39;&#39;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (SDO_Sales_Lead_Total__c &gt; 15, &#39;015Hu000005qPCG&#39;, &#39;015Hu000005qPCH&#39;),&#39;&#39;,24,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>