unpackaged/main/default/objects/Lead/fields/SDO_Sales_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Product_Interest__c</fullName>
    <description>What: What products are they interested in.</description>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>