unpackaged/main/default/objects/Lead/recordTypes/SDO_Lead_DealRegistration.recordType-meta.xml
<RecordType>
    <fullName>SDO_Lead_DealRegistration</fullName>
    <active>true</active>
    <businessProcess>Deal Registration Lead</businessProcess>
    <description>Used by partners to register leads in the Partner Community.</description>
    <label>Lead - Deal Registration</label>
</RecordType>