unpackaged/main/default/objects/Lead/listViews/My_Rejected_Registrations.listView-meta.xml
<ListView>
    <fullName>My_Rejected_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>My Rejected Registrations</label>
    <sharedTo>
        <allInternalUsers />
        <allPartnerUsers />
    </sharedTo>
</ListView>