unpackaged/main/default/objects/Lead/listViews/SDO_PRM_PartnerApproval_Lead.listView-meta.xml
<ListView>
    <fullName>SDO_PRM_PartnerApproval_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Approval Queue</label>
    <queue>SDO_PRM_PartnerApproval</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>