unpackaged/main/default/objects/Lead/listViews/SDO_Sales_Leads_for_Your_Assigned_Program.listView-meta.xml
<ListView>
    <fullName>SDO_Sales_Leads_for_Your_Assigned_Program</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot,Warm</value>
    </filters>
    <label>Leads for Your Assigned Program</label>
</ListView>